<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.typeOfCrime"
    android:orientation="vertical"
    android:background="@drawable/edit_text_style">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
     <TextView
         android:layout_marginTop="25dp"

         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/CrimeType"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/CrimeTypeMobileSnaching"
          android:id="@+id/mobilesnatching"
          android:buttonTint="@color/checkButtonColor"
          />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crimeTypeBlast"
            android:id="@+id/blast"
            android:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crimeTypeRobbery"
            android:id="@+id/robbery"
            android:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crimeTypeMurder"
            android:id="@+id/murder"
            app:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crimeTypeSexualHarassment"
            android:id="@+id/sexualHarassment"
            app:buttonTint="@color/checkButtonColor"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crimeTypeVandalism"
            android:id="@+id/vandalism"
            app:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CrimeTypeKidnapping"
            android:id="@+id/kidnapping"
            app:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vehicle Snatching"
            android:id="@+id/vehicleSnatchingId"
            app:buttonTint="@color/checkButtonColor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backId"
            android:text="Back"
            android:onClick="backTypeofCrimeClick"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"

            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Next"
                android:text="Next"
                android:onClick="Next"

                />


        </LinearLayout>



            </LinearLayout>


</LinearLayout>



