<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.criminalFacialFeature"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criminalFacialFeature"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleanShave"
            android:id="@+id/cleanSaveId"
            app:buttonTint="@color/checkButtonColor"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortBreadmoustache"
            android:id="@+id/shortBreadmoustacheId"
            app:buttonTint="@color/checkButtonColor"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LongBeardMoustache"
            android:id="@+id/LongBeardMoustacheId"
            app:buttonTint="@color/checkButtonColor"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blad"
            android:id="@+id/bladId"
            app:buttonTint="@color/checkButtonColor"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortHair"
            android:id="@+id/shortHairId"
            app:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longHaire"
            android:id="@+id/longHaireId"
            app:buttonTint="@color/checkButtonColor"


            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backId"
            android:text="Back"
            android:onClick="backFacialFeatureClick"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"

            >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facialFeatureNextId"
            android:text="Next"

            android:onClick="facialFeatureNext"
            />


    </LinearLayout>



</LinearLayout>
    </LinearLayout>
