<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.numbersOfcrimnal"
    android:orientation="vertical"
    android:background="@drawable/edit_text_style">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NumberOfCrimninal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:orientation="vertical"

            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneCriminal"
                android:id="@+id/oneCriminalId"
                app:buttonTint="@color/checkButtonColor"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TwoCriminal"
                android:id="@+id/twoCriminalId"
                app:buttonTint="@color/checkButtonColor"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ThreeCriminal"
                android:id="@+id/threeCriminalId"
                app:buttonTint="@color/checkButtonColor"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MorethanThree"
                android:id="@+id/moreThanThreeId"
                app:buttonTint="@color/checkButtonColor"
                />
        </RadioGroup>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backId"
            android:text="Back"
            android:onClick="backNumberOfCriminalClick"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"

            >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberofcrimnalNextId"
            android:text="Next"
            android:onClick="numberOfCrimninalNext"
            />


    </LinearLayout>


</LinearLayout>
</LinearLayout>