<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.criminalOutfit"
    android:orientation="vertical"
    android:background="@drawable/edit_text_style">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criminalOutfit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shalwarKameez"
            android:id="@+id/shalwarKameezId"
            app:buttonTint="@color/checkButtonColor"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jeanTShirt"
            android:id="@+id/jeanTShirtId"
            app:buttonTint="@color/checkButtonColor"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shorts"
            android:id="@+id/shotsId"
            app:buttonTint="@color/checkButtonColor"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otherOutfit"
                android:id="@+id/otherOutfitId"
                app:buttonTint="@color/checkButtonColor"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userOutfitId"
                app:buttonTint="@color/checkButtonColor"

                />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backId"
            android:text="Back"
            android:onClick="backOutfitCriminalClick"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"

            >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextOutfitId"
            android:text="Next"
            android:onClick="OutfitNext"
            />

    </LinearLayout>




</LinearLayout>
    </LinearLayout>
