<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.Victim"
    android:orientation="vertical"
    android:id="@+id/victimFragment"
    android:background="@drawable/edit_text_style">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/victim"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            android:id="@+id/you"
           app:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourFriend"
            android:id="@+id/yourFriend"
            app:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourRelative"
            android:id="@+id/yourRelative"
            app:buttonTint="@color/checkButtonColor"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stranger"
            android:id="@+id/strangerVictim"
            app:buttonTint="@color/checkButtonColor"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:buttonTint="@color/checkButtonColor"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/other"
                app:buttonTint="@color/checkButtonColor"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/victimValueText"
                app:buttonTint="@color/checkButtonColor"
                />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backId"
            android:text="Back"
            android:onClick="backVictimClick"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"

            >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/VictimNext"
            android:text="Next"
            android:onClick="victimNext"
            />

</LinearLayout>


    </LinearLayout>
</LinearLayout>