<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.Casualties"
    android:orientation="vertical"
    android:background="@drawable/edit_text_style">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/casualties"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
      <RadioGroup
          android:layout_width="match_parent"
          android:layout_height="256dp">

          <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/YesCasualties"
              android:id="@+id/YesCasualtiesId"
              app:buttonTint="@color/checkButtonColor"

              />
          <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/NoCasualties"
              android:id="@+id/NoCasualtiesId"
              app:buttonTint="@color/checkButtonColor"

              />



      </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backId"
            android:text="Back"
            android:onClick="backCasualtiesByCriminalClick"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"

            >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FinishID"
            android:text="Finish"
            android:onClick="CasualtiesNext"
            />

    </LinearLayout>

</LinearLayout>

</LinearLayout>